# degens-coinflip

./: Anchor.toml  package-lock.json  package.json  readme.md  tsconfig.json
app/: get-discriminator.js  package-lock.json  package.json  test-coinflip.js
front/: package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/components/: SolWrapper.tsx  bet-controls.tsx  coin-flip.tsx  icons.tsx  wallet-button.tsx  wallet-modal.tsx  wallet-provider.tsx
front/src/components/ui/: button.tsx
front/src/lib/: solana.ts
front/src/lib/idl/: degen_coin_flip.json
programs/: degen-coinflip.json
programs/degen-coin-flip/: Cargo.toml
programs/degen-coin-flip/src/: lib.rs
tests/: degen-coin-flip.ts  simple-anchor-test.ts  simple-test.ts
