[package]
name = "degen-coin-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_coin_flip"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
pyth-sdk-solana = "0.7.0"
pyth-vrf = { git = "https://github.com/pyth-network/pyth-sdk-rs", rev = "main" }